--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,11 +15,12 @@
         android:required="true" />
 
     <application
+        android:name=".MyApplication"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.nfctagrw.ui.MainActivity"
             android:clearTaskOnLaunch="true"
             android:configChanges="keyboardHidden|orientation"
             android:launchMode="singleTask" >
@@ -31,12 +32,12 @@
         </activity>
 
         <activity-alias
-            android:name=".MainActivityTagDetectionAlias"
+            android:name="com.example.nfctagrw.ui.MainActivityTagDetectionAlias"
             android:clearTaskOnLaunch="true"
             android:configChanges="keyboardHidden|orientation"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
-            android:targetActivity="com.example.nfctagrw.MainActivity" >
+            android:targetActivity="com.example.nfctagrw.ui.MainActivity" >
             <intent-filter>
                 <action android:name="android.nfc.action.TECH_DISCOVERED" />
             </intent-filter>
@@ -45,6 +46,14 @@
                 android:name="android.nfc.action.TECH_DISCOVERED"
                 android:resource="@xml/filter_nfc" />
         </activity-alias>
+
+        <activity
+            android:name="com.example.nfctagrw.ui.TagInfoViewer"
+            android:label="@string/title_activity_tag_info_viewer"
+            android:clearTaskOnLaunch="true"
+            android:configChanges="keyboardHidden|orientation"
+            android:launchMode="singleTask"  >
+        </activity>
     </application>
 
 </manifest>
